Changes made for Removing BaseDelegate and Introducing Spring
SVN-Revision: 190